--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>TITLE HERE</title>
+    <title>OX Cards grid</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="./bundle.js"></script>
   </body>
 </html>
